# ObsidianGPT

./: README.md  logs.sh  set-api-key.sh  upgrade.sh
ObsidianGPT/: prompt.md
backend/: .env.template  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/api/: main.py
backend/api/config/: settings.py
backend/api/routers/: __init__.py  deps.py
backend/api/routers/endpoints/: api_note.py  api_notes.py  api_schema.py
backend/api/schemas/: __init__.py  schema_message.py  schema_note.py
